# smude

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DEV_README.md  MODERNIZATION_PLAN.md  pyproject.toml
scripts/: extract_model_weights.py  smoke_loader_only.py
smude/: __init__.py  loader.py  model.py
tests/: test_loader_forward.py
